--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Marcis</title>
+    <title>Mārcis</title>
 </head>
 <body>
-    <h1>Marcis</h1>
+    <h1>Mārcis</h1>
     <h1>Alekss</h1>
 </body>
 </html>
