--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 <body>
     <h1 style="color: pink">Marcis</h1>
     <h1>Alekss</h1>
-    <h1>Jānis</h1>
+    <h1 style="color: aquamarine;">Jānis</h1>
 </body>
 </html>
